SET(MSGHUB_SRC
    msghub.cpp
    hubclient.cpp
    hubconnection.cpp
    hubmessage.cpp
)

ADD_LIBRARY(msghub STATIC ${MSGHUB_SRC})
TARGET_COMPILE_DEFINITIONS(msghub PUBLIC "-DBOOST_BIND_NO_PLACEHOLDERS=1")
TARGET_INCLUDE_DIRECTORIES(msghub SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(msghub Threads::Threads)
TARGET_LINK_LIBRARIES(msghub ${Boost_SYSTEM_LIBRARY})
TARGET_LINK_LIBRARIES(msghub ${Boost_THREAD_LIBRARY})

TARGET_INCLUDE_DIRECTORIES(msghub SYSTEM PUBLIC ../pub/)
